# context-kit

./: CHANGELOG.md  ESSAY.md  README.md  mcp_server.py  pyproject.toml  smithery.yaml
scripts/: install.sh
skills/: crm-everything.md  morning-briefing.md  open-loops.md  session-digest.md  watchers.md
templates/: CLAUDE.md.template  domain-state.md  pca-mental-models.md  pca-protocols.md  pca-voice.md  pca-wiki.md
