[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-kit-mcp"
version = "0.1.0"
description = "Personal Context Artifacts MCP server - stop re-explaining yourself to AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "claude", "context", "ai", "llm", "personal-context"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
authors = [
    {name = "JD Davenport", email = "jddavenport46@gmail.com"},
]

[project.urls]
Homepage = "https://github.com/JDDavenport/context-kit"
Documentation = "https://docs.agenttree.army/articles/personal-ai-os/"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["mcp_server.py"]
